tercer cambio, eliminando logica condicional de mas para la ultima funcion creada, aligerando asi el servicio principal