@@ -6,6 +6,7 @@ import com.example.demo.genetic.function.FitnessFunction;
 import com.example.demo.genetic.operators.*;
 import com.example.demo.genetic.metrics.MetricsService;
 import com.example.demo.genetic.population.PopulationSource;
+import com.example.demo.strategy.FitnessEvaluationStrategy;
 import org.slf4j.*;
 import org.springframework.stereotype.Service;
 import java.time.Duration;
@@ -17,14 +18,16 @@ import java.util.stream.Collectors;
 public class GeneticAlgorithmService {
 
     private static final Logger log = LoggerFactory.getLogger(GeneticAlgorithmService.class);
+
     private final AdaptiveFunctionService adaptiveFunctionService;
     private final CrossoverService crossoverService;
     private final MutationService mutationService;
     private final BinaryConverterService binaryConverterService;
     private final RealConverterService realConverterService;
+    private final MetricsService metricsService;
     private final Map<String, SelectionStrategy> selectionStrategies;
     private final Map<String, PopulationSource> populationSources;
-    private final MetricsService metricsService;
+    private final List<FitnessEvaluationStrategy> evaluationStrategies;
 
     public GeneticAlgorithmService(AdaptiveFunctionService adaptiveFunctionService,
                                    RealConverterService realConverterService,
@@ -33,7 +36,8 @@ public class GeneticAlgorithmService {
                                    BinaryConverterService binaryConverterService,
                                    MetricsService metricsService,
                                    Map<String, SelectionStrategy> selectionStrategies,
-                                   Map<String, PopulationSource> populationSources) {
+                                   Map<String, PopulationSource> populationSources,
+                                   List<FitnessEvaluationStrategy> evaluationStrategies) {
         this.adaptiveFunctionService = adaptiveFunctionService;
         this.realConverterService = realConverterService;
         this.crossoverService = crossoverService;
@@ -42,6 +46,7 @@ public class GeneticAlgorithmService {
         this.metricsService = metricsService;
         this.selectionStrategies = selectionStrategies;
         this.populationSources = populationSources;
+        this.evaluationStrategies = evaluationStrategies;
     }
 
     public List<List<Individual>> runEvolution(
@@ -59,7 +64,6 @@ public class GeneticAlgorithmService {
             double crossoverRate,
             String populationSourceType) {
 
-        // Llamada simplificada usando el valor por defecto de 0.8
         return runEvolutionWithStatus(fileBinaries, xmin, xmax, L, functionType, selectionType,
                 crossoverType, mutationType, populationSize, maxGenerations, mutationRatePerBit,
                 crossoverRate, populationSourceType, "default", null, 0.8);
@@ -81,12 +85,11 @@ public class GeneticAlgorithmService {
             String populationSourceType,
             String sessionId,
             ExecutionStatus executionStatus,
-            double convergenceThreshold) { // Parámetro de convergencia
+            double convergenceThreshold) {
 
         Instant start = Instant.now();
         int finalL = L;
 
-        // FORZAR L=34 para la función de crédito
         if ("credit".equals(functionType)) {
             finalL = 34;
             log.info("   -> ADVERTENCIA: Función de Crédito seleccionada. L forzado a {}", finalL);
@@ -102,7 +105,6 @@ public class GeneticAlgorithmService {
         log.info("   Prob. Cruce: {}%", crossoverRate * 100);
         log.info("   Prob. Mutación: {}%", mutationRatePerBit * 100);
         log.info("   Rango: x ∈ [{}, {}]", xmin, xmax);
-        // Usar {} para la convergencia
         log.info("   Condición de paro: ≥{}% de convergencia o {} generaciones",
                 (int)(convergenceThreshold * 100), maxGenerations);
 
@@ -130,6 +132,16 @@ public class GeneticAlgorithmService {
         boolean convergenceAchieved = false;
         int actualGenerations = 0;
 
+        FitnessEvaluationStrategy strategy = evaluationStrategies.stream()
+                .filter(s -> s.supports(functionType))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Estrategia no encontrada para: " + functionType));
+
+        FitnessFunction function = adaptiveFunctionService.getFunction(functionType);
+        if (function == null) {
+            throw new IllegalArgumentException("Función desconocida: " + functionType);
+        }
+
         for (int gen = 0; gen < maxGenerations; gen++) {
             actualGenerations = gen + 1;
 
@@ -142,16 +154,15 @@ public class GeneticAlgorithmService {
             log.info("        🎯 GENERACIÓN {} de {}", actualGenerations, maxGenerations);
             log.info("════════════════════════════════════════════════");
 
-            List<Individual> generation = createOrderedGeneration(currentBinaries, xmin, xmax, finalL, gen, functionType);
+            List<Individual> generation = strategy.evaluatePopulation(
+                    currentBinaries, xmin, xmax, finalL, gen, function
+            );
             generations.add(generation);
 
-            // Pasar el umbral de convergencia
-            if (checkConvergence(generation, functionType, convergenceThreshold)) {
+            if (strategy.checkConvergence(generation, function, convergenceThreshold)) {
                 log.info("🎉 ✅ ¡CONVERGENCIA DEL {}% ALCANZADA EN GENERACIÓN {}!",
                         (int)(convergenceThreshold * 100), actualGenerations);
-
                 convergenceAchieved = true;
-
                 if (executionStatus != null) {
                     executionStatus.updateGeneration(sessionId, actualGenerations);
                 }
@@ -167,14 +178,13 @@ public class GeneticAlgorithmService {
                     throw new IllegalArgumentException("Tipo de selección desconocido: " + selectionType);
                 }
 
-                if ("tournament".equals(selectionType) && selection instanceof TournamentSelection) {
-                    ((TournamentSelection) selection).configure(xmin, xmax, finalL, functionType);
+                if ("tournament".equals(selectionType) && selection instanceof com.example.demo.genetic.operators.TournamentSelection) {
+                    ((com.example.demo.genetic.operators.TournamentSelection) selection).configure(xmin, xmax, finalL, functionType);
                 }
 
                 log.info("→ SELECCIÓN: {}", selection.getName());
                 List<Individual[]> parentPairs = selection.selectPairs(generation, numPairs);
 
-                // CORRECCIÓN: Usar {} y formatear el double a string antes de loguear si se requiere precisión
                 log.info("→ CRUCE: Generando hijos con cruce de un punto (probabilidad = {}%)",
                         String.format("%.1f", crossoverRate * 100));
                 List<Individual> offspring = new ArrayList<>();
@@ -204,9 +214,8 @@ public class GeneticAlgorithmService {
                         double real = 0.0;
 
                         if ("credit".equals(functionType)) {
-                            FitnessFunction function = adaptiveFunctionService.getFunction(functionType);
-                            // Se asume que el método evaluate para CreditFitnessFunction ha sido corregido a la sobrecarga de String
-                            adaptative = function.evaluate(childBinary);
+                            FitnessFunction func = adaptiveFunctionService.getFunction(functionType);
+                            adaptative = func.evaluate(childBinary);
                             real = 0.0;
                         } else {
                             long decimal = binaryConverterService.convertBinaryToInt(childBinary);
@@ -217,11 +226,10 @@ public class GeneticAlgorithmService {
                         offspring.add(new Individual(childBinary, real, adaptative, gen + 1));
                     }
                 }
-                // CORRECCIÓN: Usar {} y formatear el double a string
+
                 log.info("→ ✅ Cruce completado: {} parejas cruzaron ({}%)", crossoverCount,
                         String.format("%.1f", (double) crossoverCount / parentPairs.size() * 100));
 
-                // CORRECCIÓN: Usar {} y formatear el double a string
                 log.info("→ MUTACIÓN ({}): Aplicando con tasa = {}%", mutationType,
                         String.format("%.3f", mutationRatePerBit * 100));
 
@@ -237,7 +245,6 @@ public class GeneticAlgorithmService {
                 }
 
                 currentBinaries = offspring.stream().map(Individual::getBinary).collect(Collectors.toList());
-                // CORRECCIÓN: Usar {}
                 log.info("→ Población ajustada a {} individuos", currentBinaries.size());
             }
         }
@@ -245,7 +252,7 @@ public class GeneticAlgorithmService {
         Instant end = Instant.now();
         Duration duration = Duration.between(start, end);
         long minutes = duration.toMinutes();
-        long seconds = duration.minusMinutes(minutes).getSeconds(); // Calcular segundos restantes
+        long seconds = duration.minusMinutes(minutes).getSeconds();
 
         log.info(" ");
         log.info("✅✅✅ ALGORITMO FINALIZADO ✅✅✅");
@@ -258,85 +265,16 @@ public class GeneticAlgorithmService {
 
         log.info("⏱️  Tiempo total de ejecución: {} minutos {} segundos", minutes, seconds);
 
-        FitnessFunction function = adaptiveFunctionService.getFunction(functionType);
-        double optimalValue = function.getOptimalValue();
+        FitnessFunction func = adaptiveFunctionService.getFunction(functionType);
+        double optimalValue = func.getOptimalValue();
 
         int generation90Percent = metricsService.findGeneration90Percent(generations, optimalValue);
         double avgDiversity = metricsService.calculateAverageDiversity(generations);
         double threshold90 = optimalValue * 0.9;
 
         metricsService.logComparisonMetrics(generation90Percent, actualGenerations, threshold90, optimalValue, avgDiversity);
-        // Nota: Si usas Java 21+, getLast() es correcto. Si usas una versión anterior (ej. Java 17), usa get(generations.size() - 1)
-        metricsService.logConvergenceResults(generations.getLast(), function);
+        metricsService.logConvergenceResults(generations.get(generations.size() - 1), func);
 
         return generations;
-    }
-
-    private boolean checkConvergence(List<Individual> generation, String functionType, double convergenceThreshold) {
-        FitnessFunction function = adaptiveFunctionService.getFunction(functionType);
-        double targetX = function.getTargetX();
-
-        if ("credit".equals(functionType)) {
-            long countConverged = generation.stream()
-                    .filter(ind -> ind.getAdaptative() >= targetX * convergenceThreshold)
-                    .count();
-
-            double percentage = (double) countConverged / generation.size();
-            boolean converged = percentage >= convergenceThreshold;
-
-            if (converged) {
-                log.info("   → ✅ Convergencia verificada: {}% (≥{}%)",
-                        String.format("%.1f", percentage * 100),
-                        (int)(convergenceThreshold * 100));
-            } else {
-                log.info("   → ⏳ Convergencia actual: {}% (<{}%)",
-                        String.format("%.1f", percentage * 100),
-                        (int)(convergenceThreshold * 100));
-            }
-            return converged;
-
-        } else {
-            // Lógica existente para funciones f(x)
-            long countConverged = generation.stream()
-                    .filter(ind -> Math.abs(Math.abs(ind.getReal()) - targetX) < 0.1)
-                    .count();
-
-            double percentage = (double) countConverged / generation.size();
-            boolean converged = percentage >= convergenceThreshold;
-
-            if (converged) {
-                log.info("   → ✅ Convergencia verificada: {}% (≥{}%)",
-                        String.format("%.1f", percentage * 100),
-                        (int)(convergenceThreshold * 100));
-            } else {
-                log.info("   → ⏳ Convergencia actual: {}% (<{}%)",
-                        String.format("%.1f", percentage * 100),
-                        (int)(convergenceThreshold * 100));
-            }
-            return converged;
-        }
-    }
-
-    private List<Individual> createOrderedGeneration(List<String> binaries, double xmin, double xmax, int L, int generationIndex, String functionType) {
-        List<Individual> individuals = new ArrayList<>();
-        FitnessFunction function = adaptiveFunctionService.getFunction(functionType);
-
-        if ("credit".equals(functionType)) {
-            for (String binary : binaries) {
-                double fitnessValue = function.evaluate(binary);
-                individuals.add(new Individual(binary, 0.0, fitnessValue, generationIndex));
-            }
-        } else {
-            List<Long> decimals = binaryConverterService.convertBinaryListToIntegers(binaries);
-            List<Double> reals = realConverterService.toReal(decimals, xmin, xmax, L);
-            List<Double> fitnessValues = adaptiveFunctionService.toAdaptive(reals, functionType);
-
-            for (int i = 0; i < binaries.size(); i++) {
-                individuals.add(new Individual(binaries.get(i), reals.get(i), fitnessValues.get(i), generationIndex));
-            }
-        }
-
-        individuals.sort(Comparator.comparingDouble(Individual::getAdaptative).reversed());
-        return individuals;
     }
 }
